# rag-evaluation-platform

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  turbo.json
.claude/: settings.json
apps/service/core/: package.json
apps/service/eval/: .env.example  CLAUDE.md  Dockerfile  README.md  package.json  pyproject.toml
apps/service/eval/app/: config.py  contracts.py  main.py
apps/service/eval/app/routes/: evaluate.py  health.py
apps/service/eval/app/services/: rag_client.py  scorer.py
apps/service/eval/patches/: lc_vertexai_stub.py
apps/service/eval/tests/: conftest.py  test_contracts.py  test_rag_client.py  test_routes.py  test_scorer.py
apps/web/dashboard/: package.json
libs/config/: eslint.base.mjs  package.json  prettier.config.mjs  tsconfig.base.json
libs/contracts/: CLAUDE.md  evaluate_contract.py  package.json  tsconfig.json
libs/contracts/src/: evaluate.ts  index.ts
libs/db/: CLAUDE.md  package.json  prisma.config.ts  tsconfig.json
libs/db/prisma/: schema.prisma
libs/db/prisma/migrations/20260524082144_initial_schema/: migration.sql
libs/db/src/: client.ts  index.ts
