[project]
name = "eval"
version = "0.1.0"
description = "RAG evaluation service — RAGAS scoring via HTTP"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.136.3",
    "httpx>=0.28.1",
    "langchain-anthropic>=1.4.3",
    "pydantic-settings>=2.14.1",
    "ragas==0.4.3",
    "uvicorn[standard]>=0.48.0",
]
