[project]
name = "eval"
version = "0.1.0"
description = "RAG evaluation service — RAGAS scoring via HTTP"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.136.3",
    "httpx>=0.28.1",
    "langchain-anthropic>=1.4.3",
    "pydantic-settings>=2.14.1",
    "ragas==0.4.3",
    "uvicorn[standard]>=0.48.0",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.25",
    "ruff>=0.12",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
